--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -4,6 +4,28 @@
 @tailwind components;
 @tailwind utilities;
 
+@keyframes slide {
+  0% { transform: translateX(0%); }
+  20% { transform: translateX(0%); }
+
+  25% { transform: translateX(-100%); }
+  45% { transform: translateX(-100%); }
+
+  50% { transform: translateX(-200%); }
+  70% { transform: translateX(-200%); }
+
+  75% { transform: translateX(-300%); }
+  95% { transform: translateX(-300%); }
+
+  100% { transform: translateX(0%); }
+}
+
+.animate-slide {
+  width: 400%; /* 4 images */
+  animation: slide 16s infinite ease-in-out;
+}
+
+
 @layer base {
   body {
     @apply font-sans bg-background;
